--- a/nginx/outoforder.html
+++ b/nginx/outoforder.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Maintenance</title>
+  <title>Evaluation System</title>
   <link rel="shortcut icon" href="/favicon.svg"/>
   <style>
     body {
@@ -29,7 +29,7 @@
 
     p {
       font-size: 1.5em;
-      max-width: 600px;
+      text-align: center;
     }
 
     img {
@@ -41,9 +41,9 @@
 </head>
 <body>
   <main>
-    <h1>⚠️  Freva is under maintenance</h1>
+    <h1>🚧 Freva is temporarily unavailable</h1>
     <img src="/under_construction.gif" alt="Under Construction" />
-    <p>Our system is currently undergoing maintenance.<br>It won’t take long — please check back soon.</p>
+    <p>It won’t take long — please check back soon.</p>
   </main>
 </body>
 </html>
